--- a/class.html
+++ b/class.html
@@ -12,6 +12,7 @@
     <h1>Welcome Back!</h1>
     <h3>It has been a long time since I have seen you! Let's see how much you remember...</h3>
     <p>It has been almost 3 years since I have really messed around much with </p>
+    <p>;laksdjf;lasjdf;l</p>
     </center>
 </body>
 </html>
