Added links to pages I've worked on in class

--- a/Week 1/class.html
+++ b/Week 1/class.html
@@ -8,6 +8,7 @@
     <title>First College Site</title>
   </head>
   <body>
+    <a href="/WDD130/index.html">Back to Home</a>
     <center>
       <h1>Welcome!</h1>
       <h3>this is intro to</h3>
