--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./wednesday.css" />
   </head>
   <body>
+    <a href="/WDD130/index.html">Back to Home</a>
     <!--One of the ways to do CSS, but is the messiest and uggliest.-->
     <h1
       style="
