--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./homepage.css" />
     <title>Home page</title>
   </head>
   <body>
     <h1>Home Page</h1>
-    <a href="/WDD130/Week 2/index.html">Week 2 Class Page</a>
+    <a href="./Week 1/class.html">Week 1 In Class Page</a>
+    <a href="/WDD130/Week 2/index.html">Week 2 In Class Page</a>
   </body>
 </html>
