--- a/Week 3/css_continued.html
+++ b/Week 3/css_continued.html
@@ -8,8 +8,10 @@
     <title>CSS Classing/ID/Wireframe</title>
   </head>
   <body>
+    <a href="/WDD130/index.html">Home</a>
     <p class="green" class="red">This guys is red</p>
     <p class="blue">This guy is blue</p>
     <p class="green">This guy is green</p>
+    <p id="small_purple">This is our id</p>
   </body>
 </html>
