--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Home page</title>
   </head>
   <body>
-    <h1>Home Page</h1>
+    <h1 class="Home">Home Page</h1>
     <a href="./Week 1/class.html">Week 1 In Class Page</a>
     <a href="/WDD130/Week 2/index.html">Week 2 In Class Page</a>
+    <a href="./Week 3/css_continued.html">Week 3 In Class Page</a>
   </body>
 </html>
