added wire fram to home page

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="./Week 1/class.html">Week 1 In Class Page</a>
     <a href="/WDD130/Week 2/index.html">Week 2 In Class Page</a>
     <a href="./Week 3/css_continued.html">Week 3 In Class Page</a>
+    <a href="https://wireframe.cc/a35T2R">wireframe idea for wwr project</a>
   </body>
 </html>
