--- a/Week 4/Team practice.html
+++ b/Week 4/Team practice.html
@@ -7,27 +7,29 @@
     <title>President Nelson thing</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header class="header">Education</header>
+  <body class="page">
+    <h1 class="header">Education</h1>
     <section>
       Education is the difference between wishing you could help others & being
       able to help them
     </section>
     <section>---President Nelson</section>
-    <ol>
-      <li>Faith In the Lord Jesus Christ</li>
-      <li>Repentance</li>
-      <li>Baptism by immersion for the remission of sins</li>
-      <li>Laying on of hands for the gift of the Holy Ghost</li>
-    </ol>
-    <img
-      class="img"
-      src="./Images/Prez Nelson.png"
-      alt="President Russel M. Nelson"
-    />
-    <section class="quote">
+    <div>
+      <ol>
+        <li>Faith In the Lord Jesus Christ</li>
+        <li>Repentance</li>
+        <li>Baptism by immersion for the remission of sins</li>
+        <li>Laying on of hands for the gift of the Holy Ghost</li>
+      </ol>
+      <img
+        class="img"
+        src="./Images/Prez Nelson.png"
+        alt="President Russel M. Nelson"
+      />
+      <section class="quote">
       "Because of the Savior's Atonement, His gospel provides an invitation to
       keep changing, growing, and becoming more pure."
+    </div>
     </section>
     <section>
       Russell M. Nelson President of the Church of Jesus Christ of Latter-day
