--- a/wwr/index.html
+++ b/wwr/index.html
@@ -42,7 +42,7 @@
         </section>
       </div>
       <main class="home-grid">
-        <section class="riivers-card">
+        <section class="rivers-card">
           <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
           <img class="icon" src="images/river_icon.png" alt="river icon" />
           <h2>Rivers</h2>
