--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="./wwr/index.html"
       >W03 - HTML for the Home Page (Hazel_Arts beginings)</a
     >
+    <a href="./Hazel_Arts/index.html">Actual Hazel Page</a>
   </body>
 </html>
