--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -11,7 +11,7 @@
     <header>
       <img href="index.html" src="" alt="Hazel_Artz Logo" />
       <a href="https://wireframe.cc/x6RNzK">Site plan</a>
-      <a href="">Drawings wireframe</a>
+      <a href="">Page 2 "Drawings" wireframe</a>
     </header>
   </body>
 </html>
