--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <a href="/WDD130/Week 2/index.html">Week 2 In Class Page</a>
     <a href="./Week 3/css_continued.html">Week 3 In Class Page</a>
     <a href="https://wireframe.cc/a35T2R">wireframe idea for wwr project</a>
-    <a href="./wwr/index.html"
-      >W03 - HTML for the Home Page (Hazel_Arts beginings)</a
-    >
+    <a href="./wwr/index.html">W03 WWR Site</a>
     <a href="./Hazel_Arts/index.html">Actual Hazel Page</a>
+    <a href="./Hazel_Arts/site-plan.html">Hazel_arts Site plan</a>
   </body>
 </html>
