--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -9,9 +9,49 @@
   </head>
   <body>
     <header>
-      <img href="index.html" src="" alt="Hazel_Artz Logo" />
-      <a href="https://wireframe.cc/x6RNzK">Site plan</a>
+      <img href="index.html" src="" alt="Hazel_Artz Logo" />'
+      <a href="./site-plan.html"></a>
+      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
       <a href="">Page 2 "Drawings" wireframe</a>
     </header>
+    <article>
+      <h2><b>Why come to this site?</b></h2>
+      <p>
+        People will come to this site for a variaty of different reasons.
+        However the main ones will be for Commission based art requests. This
+        will be the place where a majority of the Buisness of Hazel_Arts will be
+        conducted. It will also serve as a portfolio/gallary of Her art to
+        display, and provide potential contracts and other buisness offers for
+        her tallents.
+      </p>
+      <h2><b>What questions can be answered?</b></h2>
+      <p>
+        They can expect to know a ball park on price they will pay for the art.
+        Who Hazel_Arts is, what she does, and what her insperations for her
+        peices are. Ways to contact and request things to be created, and
+        estimated times for there compleation.
+      </p>
+      <h2><b>What activities will be compleated?</b></h2>
+      <p>
+        Veiwing of Hazel's most recent work. requesting peices or things to be
+        created. Contacting Hazel for any specific questions or concerns.
+        Newsleters on deals and other promotions.
+      </p>
+      <h2><b>What info is required to compleate actions?</b></h2>
+      <p>
+        There will be an account system created. Most if not all orders will be
+        done through the UI on the requests page, where contact info and
+        description/concepts of the item to be made will need to be
+        supplied/refferenced. An understanding that this is a buisness and that
+        things will not be free.
+      </p>
+      <h2><b>Why come to this site?</b></h2>
+      <p>
+        The concept of this page may not be unique, but the content on it is.
+        The creations of Hazel_Arts will not be able to be aquired any where
+        else. So if you are a fan of what she does or want to aquire any of her
+        pieces this will be the only place you can get them.
+      </p>
+    </article>
   </body>
 </html>
