--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <a href="https://wireframe.cc/a35T2R">wireframe idea for wwr project</a>
     <a href="./wwr/index.html">W03 WWR Site</a>
     <a href="./Hazel_Arts/index.html">Actual Hazel Page</a>
-    <a href="./Hazel_Arts/site-plan.html">Hazel_arts Site plan</a>
+    <!-- <a href="./Hazel_Arts/site-plan.html">Hazel_arts Site plan</a> -->
   </body>
 </html>
