Finished Site plan

--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -12,6 +12,7 @@
       <img href="index.html" src="" alt="Hazel_Artz Logo" />'
       <a href="./site-plan.html"></a>
       <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+      <a href="./site-plan.html">Site Plan</a>
       <a href="">Page 2 "Drawings" wireframe</a>
     </header>
     <article>
