--- a/Hazel_Arts/site-plan.html
+++ b/Hazel_Arts/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Hazel_Artz Site Plan</h1>
       <h2>Taden Marston</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-9am</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -91,7 +91,7 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
+        <a href="./index.html">Home</a>
         <a href="#">Page2</a>
         <a href="#">Page3</a>
       </nav>
@@ -104,10 +104,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Drawings <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          FAQ  <!-- change this -->
         </div>
 
         <div class="top">
@@ -128,30 +128,59 @@
         Content
       </h2>
       <h3>Home page</h3>
+      <h3><b>Why come to this site?</b></h3>
       <p>
-        [Written copy for the home page here]
+        The concept of this page may not be unique, but the content on it is.
+        The creations of Hazel_Arts will not be able to be aquired any where
+        else. So if you are a fan of what she does or want to aquire any of her
+        pieces this will be the only place you can get them.
+      </p>
+      <h3><b>Why use this site?</b></h3>
+      <p>
+        People will come to this site for a variaty of different reasons.
+        However the main ones will be for Commission based art requests. This
+        will be the place where a majority of the Buisness of Hazel_Arts will be
+        conducted. It will also serve as a portfolio/gallary of Her art to
+        display, and provide potential contracts and other buisness offers for
+        her tallents.</p>
+
+      <img src="./Img/rsz_1pexels-anni-roenkae-2983141.jpg" alt="Waiting for actual Art from Hazel">
+      <img src="./Img/rsz_1pexels-dids-3045828.jpg" alt="Waiting for actual Art from Hazel">
+      
+    </ul>
+    <h3>Drawings</h3>
+    <h3><b>What activities will be compleated?</b></h3>
+      <p>
+        Veiwing of Hazel's most recent work. requesting peices or things to be
+        created. Contacting Hazel for any specific questions or concerns.
+        Newsleters on deals and other promotions.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
-      </ul>
-      <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="./Img/rsz_1pexels-steve-johnson-1509534.jpg" alt="Waiting for actual Art from Hazel">
+        <img src="./Img/rsz_4pexels-anni-roenkae-2860807.jpg" alt="Waiting for actual Art from Hazel">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>
-        [Written copy for the Page 3 here]
+        <h3><b>What questions can be answered?</b></h3>
+      <p>
+        They can expect to know a ball park on price they will pay for the art.
+        Who Hazel_Arts is, what she does, and what her insperations for her
+        peices are. Ways to contact and request things to be created, and
+        estimated times for there compleation.
+      </p>
+      <h3><b>What info is required to compleate actions?</b></h3>
+      <p>
+        There will be an account system created. Most if not all orders will be
+        done through the UI on the requests page, where contact info and
+        description/concepts of the item to be made will need to be
+        supplied/refferenced. An understanding that this is a buisness and that
+        things will not be free.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="./Img/rsz_pexels-dids-3737718.jpg" alt="Waiting for actual Art from Hazel">
+        <img src="./Img/rsz_pexels-ezequiel-da-silva-2902536.jpg" alt="Waiting for actual Art from Hazel">
 
       </ul>
       <hr>
@@ -165,15 +194,15 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <a href="https://wireframe.cc/x6RNzK">Home Page Wire Frame</a>
 
-      <h3>[Page 2]</h3>
+      <h3>Drawings</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>FAQs</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
