--- a/Hazel_Arts/site-plan.html
+++ b/Hazel_Arts/site-plan.html
@@ -92,8 +92,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="./index.html">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="./Drawings.html">Drawings</a>
+        <a href="./FAQs.html">FAQs</a>
       </nav>
       <hr>
       <h2>
