--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -114,8 +114,8 @@
       <h3>Navigation</h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
+        <a href="./index.html">Home</a>
+        <a href="./faq.html">FAQs</a>
         <a href="#">Contact Us</a>
       </nav>
       <hr />
@@ -143,7 +143,10 @@
         alt="home page wireframe"
       />
 
-      <h3>[Page 2]</h3>
+      <h3>FAQs</h3>
+      <a href="https://wireframe.cc/onU7XU"
+        ><img src="./images/Page 2 wireframe.png" alt="Wire fram for FAQs"
+      /></a>
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
     </main>
