Finished Dry oar page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hazel Artz | Beautiful Art For Commition | Home</title>
+    <title>Dry Oar | Rafting Reservations</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -12,16 +12,13 @@
     <div id="content">
       <header>
         <a href="index.html" id="logo_link"
-          ><img
-            class="logo"
-            src="./images/logo.png"
-            alt="Hazel_Artz Logo place holder"
+          ><img class="logo" src="./images/logo.png" alt="Dry Oar logo"
         /></a>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">Page 2</a>
+          <a href="./faq.html">FAQs</a>
           <a href="site-plan-rafting.html">Site Plan</a>
-          <a href="contactus.html">Contact Us</a>
+          <a href="#">Contact Us</a>
         </nav>
       </header>
       <div id="hero">
@@ -37,7 +34,7 @@
           <h1 class="home-title">Have An Adventure</h1>
           <h4>Make Memories with Dry Oar</h4>
           <div class="button-box">
-            <a class="book" href="rates.html">Book Now!</a>
+            <a class="book" href="#">Book Now!</a>
           </div>
         </section>
       </div>
@@ -71,13 +68,13 @@
             get away from it all and relax amonst all the beauty of the great
             outdoors.
           </p>
-          <a class="join" href="rivers.html">Join Us</a>
+          <a class="join" href="#">Join Us</a>
         </section>
       </main>
       <footer>
-        <p>Hazel_Artz &copy; 2022 - Taden Marston</p>
+        <p>Dry Oar &copy; 2022 - Taden Marston</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="#">Contact Us</a></p>
         <div class="social">
           <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon" />
