--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -5,77 +5,302 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rafting FAQs</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles/faq.css" />
   </head>
   <body>
-    <a href="./index.html">Home</a>
-    This is a place to answer frequently asked client questions. Is this a good
-    trip for kids? What are the age ranges you allow? Absolutely this is a good
-    trip for children of all ages. We have found however that children over the
-    age of 8 seem to enjoy it more overall (And parents especially enjoy it more
-    if their children are all over 8). A common concern we get from parents is
-    that their children will be bored stuck on a boat for hours at a time.
-    Surprisingly we deal with very few bored children of any age. The areas we
-    are rafting through are some of the most beautiful in the world, and you
-    never know what you might see around any corner. Not to mention the rapids
-    which keep things very interesting. Each boat also comes equipped with a
-    guide. It has been proven that river guides are unable to go for very long
-    at all without telling stories...some of which are even true! Is whitewater
-    rafting safe? I don't even know how to swim! Can I still come? As with all
-    adventure sports, there is an inherent and assumed element of risk. To help
-    ensure your safety, our guides are all certified in Wilderness First aid and
-    all start with at least 3 years of rafting experience. The most common
-    injuries are sunburns and injuries that occur on land. Everyone on
-    commercial rafting trips wears coast guard approved life vest or personal
-    flotation device (PFD). Many non swimmers go on rafting trips and have a
-    great time. Your guide will give you an in depth and engaging safety talk
-    before your trip begins explaining what you should prepare for and do in the
-    event that you fall out of the raft. What is included in the trip? We will
-    provide all necessary camping equipment. This includes a sleeping bag, foam
-    pad, waterproof duffle bag, small waterproof day bag, tent and a cot, eating
-    utensils and camping chair. We provided water and lemonade during the day.
-    Coffee, tea and hot chocolate are provided during the morning and evening
-    hours. You may bring beer, liquor and soft drinks (in reasonable amounts, 2
-    cans per day). You may purchase these items either the night before the
-    trip, or on your way to the put-in. 3 meals per day, plus snacks What do I
-    need to bring? The most effective way to plan for temperature and weather
-    changes in the Canyon is to be prepared for both hot & dry and cold & wet
-    Rain jacket and rain pants- do not bring ponchos Quick dry shirts and shorts
-    long sleeve cotton shirt and pants- helps keep you cooler on hot days.
-    Button down shirts provide more sun protection on the neck Light Weight
-    Cotton Pant, Nylon Pant or Sarong the best thing for men to wear are swim
-    trunks as shorts if you are cold natured, bring polypropylene long underwear
-    top and bottom Women wear swim suits or quick dry underwear and sport bras
-    as a base layer during the day. Over the base layer, wear a pair of quick
-    dry shorts and the shirt of your choice (polypropylene if you are cold,
-    cotton if you are hot). Two piece swim suits are convenient when changing or
-    going to the bathroom. hat- large brim hat offers protection from the sun
-    with a good quality strap. Sunglasses with strap socks- used for hiking and
-    to protect your feet from the sun. sandals or water shoes- if not used to
-    hiking in these, bring a pair of shoes you have hiked in before camper wear:
-    Bring something comfortable to wear around camp. Cotton dresses, skirts and
-    sarongs are all popular options. Sleep wear: You might choose to sleep in
-    your camp wear. Otherwise, you might like to bring something comfortable to
-    sleep in. water bottle small day pack for hikes moisturizing lotion headlamp
-    or flashlight moleskin waterproof sunscreen and lip balm optional items:
-    gloves fleece jacket towel bandana small pillow hygiene products:
-    toothpaste, toothbrush, tissue, nail clippers, feminine hygiene products,
-    extra eyeglasses or contacts, biodegradable soap and shampoo camera
-    equipment book, watercolors, journal and pen What is so great about
-    whitewater rafting anyway? Are you kidding me! What's not great about
-    whitewater rafting!...Let's describe a common day on the river. Arise in the
-    soft light of the early morning after a night spent sleeping under a
-    beautiful starry sky. Have a hearty warm breakfast of fresh blueberry
-    pancakes or omelets to order, then pack your things and prepare for the day.
-    The day is filled with some combination of swift water, rapids, calms,
-    hikes, history, geology, stories, and more good food. We try to hit camp
-    around 4 or 5, after setting up your cot you can relax with a good book or
-    good company by the river, or explore around camp while your guides prepare
-    your dinner...something perhaps like steak and potatoes, or grilled
-    salmon...and dutch oven brownies...you won't forget the dutch oven brownies.
-    After dinner it's more relaxing, and you might even be able to talk your
-    guide into another story or two to send you off to bed under more stars than
-    you thought were possible. How far in advance should I book my trip? If you
-    have specific dates you need, we recommend booking a year in advance. If you
-    can be more flexible 6 months in advance is usually sufficient.
+    <div id="content">
+      <header>
+        <a href="index.html" id="logo_link"
+          ><img class="logo" src="./images/logo.png" alt="Dry Oar logo"
+        /></a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="./faq.html">FAQs</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="#">Contact Us</a>
+        </nav>
+      </header>
+      <div>
+        <div id="canyon">
+          <h2 id="canyon-msg">Got Questions? We have answers!</h2>
+          <div id="canyon-box">
+            <img
+              id="canyon img"
+              src="./images/cool rafting pic.jpg"
+              alt="Cool rafting picture"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-child-reaching"></i>
+            Is this a good trip for kids?
+          </h3>
+          <p>
+            Absolutely this is a good trip for children of all ages. We have
+            found however that children over the age of 8 seem to enjoy it more
+            overall (And parents especially enjoy it more if their children are
+            all over 8).
+          </p>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-chart-simple"></i>
+            What are the age ranges you allow?
+          </h3>
+          <p>
+            A common concern we get from parents is that their children will be
+            bored stuck on a boat for hours at a time. Surprisingly we deal with
+            very few bored children of any age. The areas we are rafting through
+            are some of the most beautiful in the world, and you never know what
+            you might see around any corner.
+          </p>
+          <p>
+            Not to mention the rapids which keep things very interesting. Each
+            boat also comes equipped with a guide. It has been proven that river
+            guides are unable to go for very long at all without telling
+            stories...some of which are even true!
+          </p>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-triangle-exclamation"></i> Is whitewater
+            rafting safe?
+          </h3>
+          <p>
+            As with all adventure sports, there is an inherent and assumed
+            element of risk. To help ensure your safety, our guides are all
+            certified in Wilderness First aid and all start with at least 3
+            years of rafting experience. The most common injuries are sunburns
+            and injuries that occur on land.
+          </p>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-person-drowning"></i>
+            I don't even know how to swim! Can I still come?
+          </h3>
+          <p>
+            Everyone on commercial rafting trips wears coast guard approved life
+            vest or personal flotation device (PFD). Many non swimmers go on
+            rafting trips and have a great time. Your guide will give you an in
+            depth and engaging safety talk before your trip begins explaining
+            what you should prepare for and do in the event that you fall out of
+            the raft.
+          </p>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-person-walking-luggage"></i>
+            What is included in the trip?
+          </h3>
+          <h4>We will provide all necessary camping equipment.</h4>
+          <div class="included">
+            <p class="list_start">This includes:</p>
+            <ul class="provided">
+              <li>Sleeping Bag</li>
+              <li>Foam Pad</li>
+              <li>Waterproof Duffle Bag</li>
+              <li>Small Waterproof Day Bag</li>
+              <li>Tent and Cot</li>
+              <li>Eating Utensils</li>
+              <li>Camping Chair</li>
+            </ul>
+
+            <p class="food">Food that is included</p>
+            <ul class="food_options">
+              <li>We provided water and lemonade during the day.</li>
+              <li>
+                Coffee, tea and hot chocolate are provided during the morning
+                and evening hours.
+              </li>
+              <li>
+                You may bring beer, liquor and soft drinks (in reasonable
+                amounts, 2 cans per day).
+              </li>
+              <li>
+                You may purchase these items either the night before the trip,
+                or on your way to the put-in. 3 meals per day, plus snacks.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="box">
+          <h3><i class="fa-solid fa-suitcase"></i> What do I need to bring?</h3>
+          <h4>
+            The most effective way to plan for temperature and weather changes
+            in the Canyon is to be prepared for both hot & dry and cold & wet
+            Rain jacket and rain pants.
+          </h4>
+          <p class="list_title">Bring and Bring Nots</p>
+          <ul class="bring">
+            <li>Do not bring ponchos!</li>
+            <li>
+              Quick dry shirts and shorts long sleeve cotton shirt and pants-
+              helps keep you cooler on hot days.
+            </li>
+            <li>Button down shirts provide more sun protection on the neck.</li>
+            <li>
+              Light Weight Cotton Pant, Nylon Pant or Sarong the best thing for
+              men to wear are swim trunks as shorts.
+            </li>
+
+            <li>
+              If you are cold natured, bring polypropylene long underwear top
+              and bottom.
+            </li>
+            <li>
+              Women wear swim suits or quick dry underwear and sport bras as a
+              base layer during the day.
+            </li>
+            <li>
+              Over the base layer, wear a pair of quick dry shorts and the shirt
+              of your choice (polypropylene if you are cold, cotton if you are
+              hot).
+            </li>
+            <li>
+              Two piece swim suits are convenient when changing or going to the
+              bathroom.
+            </li>
+            <li>
+              Hat- large brim hat offers protection from the sun with a good
+              quality strap.
+            </li>
+            <li>Sunglasses with strap</li>
+            <li>
+              Socks- used for hiking and to protect your feet from the sun.
+            </li>
+            <li>
+              Sandals or water shoes- if not used to hiking in these, bring a
+              pair of shoes you have hiked in before
+            </li>
+            <li>
+              Camper wear:
+              <ul>
+                <li>Bring something comfortable to wear around camp.</li>
+                <li>
+                  Cotton dresses, skirts and sarongs are all popular options.
+                </li>
+              </ul>
+            </li>
+            <li>
+              Sleep wear:
+              <ul>
+                <li>
+                  You might choose to sleep in your camp wear. Otherwise, you
+                  might like to bring something comfortable to sleep in.
+                </li>
+              </ul>
+            </li>
+            <li>Water Bottle</li>
+            <li>Small Day Pack for Hikes</li>
+            <li>Moisturizing lotion</li>
+            <li>Headlamp or flashlight</li>
+            <li>Moleskin</li>
+            <li>Waterproof sunscreen and lip balm</li>
+            <li>
+              Optional items:
+              <ul>
+                <li>Gloves</li>
+                <li>Fleece Jacket</li>
+                <li>Towel</li>
+                <li>Bandana</li>
+                <li>Small Pillow</li>
+              </ul>
+            </li>
+            <li>
+              Hygiene Products:
+              <ul>
+                <li>Toothpaste</li>
+                <li>Toothbrush</li>
+                <li>Tissue</li>
+                <li>Nail Clippers</li>
+                <li>Feminine Hygiene Products</li>
+                <li>Extra eyeglasses or contacts</li>
+                <li>Biodegradable soap and shampoo</li>
+                <li>Camera and Equipment</li>
+                <li>Book</li>
+                <li>Watercolors</li>
+                <li>Journal</li>
+                <li>Pen</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-regular fa-star"></i>
+            What is so great about whitewater rafting anyway?
+          </h3>
+          <div class="fun_rafting">
+            <h5>
+              Are you kidding me! What's not great about whitewater rafting!
+            </h5>
+            <p>Let's describe a common day on the river...</p>
+            <p>
+              Arise in the soft light of the early morning after a night spent
+              sleeping under a beautiful starry sky.
+            </p>
+
+            <p>
+              Have a hearty warm breakfast of fresh blueberry pancakes or
+              omelets to order, then pack your things and prepare for the day.
+            </p>
+            <p>
+              The day is filled with some combination of swift water, rapids,
+              calms, hikes, history, geology, stories, and more good food.
+            </p>
+            <p>
+              We try to hit camp around 4 or 5, after setting up your cot you
+              can relax with a good book or good company by the river, or
+              explore around camp while your guides prepare your
+              dinner...something perhaps like steak and potatoes, or grilled
+              salmon...and dutch oven brownies...you won't forget the dutch oven
+              brownies.
+            </p>
+            <p>
+              After dinner it's more relaxing, and you might even be able to
+              talk your guide into another story or two to send you off to bed
+              under more stars than you thought were possible.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <h3>
+            <i class="fa-solid fa-calendar-days"></i>
+            How far in advance should I book my trip?
+          </h3>
+          <p>
+            If you have specific dates you need, we recommend booking a year in
+            advance. If you can be more flexible 6 months in advance is usually
+            sufficient.
+          </p>
+        </div>
+        <h2>When will your next adventure begin?</h2>
+      </div>
+      <footer>
+        <p>Dry Oar &copy; 2022 - Taden Marston</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="#">Contact Us</a></p>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon" />
+          </a>
+          <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon" />
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon" />
+          </a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
