--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -31,6 +31,7 @@
         <div id="canyon">
           <h2 id="canyon-msg">Got Questions? We have answers!</h2>
           <div id="canyon-box">
+            <!-- Prettier Formating -->
             <img
               id="canyon img"
               src="./images/cool rafting pic.jpg"
