--- a/Hazel_Arts/site-plan.html
+++ b/Hazel_Arts/site-plan.html
@@ -192,21 +192,23 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The Most recent works section I want to have a clean looking CSS scrolling between the most recent projects. The other image boxes scattered throughout the page are little sprites of Hazle's Persona.
       </p>
       <a href="https://wireframe.cc/x6RNzK">Home Page Wire Frame</a>
 
       <h3>Drawings</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This page is primarily used for viewing concepts of how Hazle Draws and providing a user input to describe what it is they are Commissioning her to make.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <a href="https://wireframe.cc/BefQ7H">Drawings Wirefarme</a>
 
       <h3>FAQs</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        As with everything in the art world, there are a lot of questions. It will hold more general ones for the time being but as the site is used
+        we will update the questions to greater reflect what the most frequent questions she recieves are. As well as provide an option to ask her specific questions
+        if they are not answered on this page.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <a href="https://wireframe.cc/kETTgA">FAQ Wirefarme</a>
     </main>
   </body>
 
