--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./styles/faq.css" />
     <title>Contact Us</title>
     <style>
+      .header {
+        background-color: rgba(0, 255, 85, 0.281);
+      }
       form {
         /* Center the form on the page */
         margin: 0 auto;
@@ -89,13 +92,14 @@
   </head>
   <body>
     <div id="content">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="./faq.html">FAQs</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="./contactus.html">Contact Us</a>
-      </nav>
-      <header></header>
+      <div class="header">
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="./faq.html">FAQs</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="./contactus.html">Contact Us</a>
+        </nav>
+      </div>
       <main>
         <div id="feedback"></div>
         <form action="/my-handling-form-page" method="post">
