--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -116,7 +116,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./faq.html">FAQs</a>
-        <a href="#">Contact Us</a>
+        <a href="./contactus.html">Contact Us</a>
       </nav>
       <hr />
       <h2>Site Map</h2>
