--- a/Hazel_Arts/Drawings.html
+++ b/Hazel_Arts/Drawings.html
@@ -7,7 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./site-plan.html">Site Plan</a>
-    <a href="./index.html">Home</a>
+    <nav>
+      <img href="index.html" src="" alt="Hazel_Artz Logo" />
+      <a href="./Drawings.html">Drawings</a>
+      <a href="./FAQs.html">FAQ's</a>
+      <a href="./site-plan.html">Site Plan</a>
+      <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
+    </nav>
+    <footer>
+      <a href="./Drawings.html">Drawings</a>
+      <a href="./FAQs.html">FAQ's</a>
+      <a href="./site-plan.html">Site Plan</a>
+      <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
+    </footer>
   </body>
 </html>
