--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <nav>
-      <img href="index.html" src="" alt="Hazel_Artz Logo" />'
-      <a href="./site-plan.html"></a>
-      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+      <img href="index.html" src="" alt="Hazel_Artz Logo" />
+      <a href="./Drawings.html">Drawings</a>
+      <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
-      <a href="">Page 2 "Drawings" wireframe</a>
+      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
     </nav>
     <main>
       <article>
@@ -56,6 +56,12 @@
         </p>
       </article>
     </main>
-    <footer>&copy;</footer>
+    <footer>
+      Hazel_Artz&copy; Taden Marston &copy;
+      <a href="./Drawings.html">Drawings</a>
+      <a href="./FAQs.html">FAQ's</a>
+      <a href="./site-plan.html">Site Plan</a>
+      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+    </footer>
   </body>
 </html>
