--- a/Hazel_Arts/Drawings.html
+++ b/Hazel_Arts/Drawings.html
@@ -15,6 +15,24 @@
       <a href="./site-plan.html">Site Plan</a>
       <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
     </nav>
+    <main>
+      <h3><b>What activities will be compleated?</b></h3>
+      <p>
+        Veiwing of Hazel's most recent work. requesting peices or things to be
+        created. Contacting Hazel for any specific questions or concerns.
+        Newsleters on deals and other promotions.
+      </p>
+      <p>Images for the Home page</p>
+      <p>Images for the Page 2</p>
+      <img
+        src="./Img/rsz_1pexels-steve-johnson-1509534.jpg"
+        alt="Waiting for actual Art from Hazel"
+      />
+      <img
+        src="./Img/rsz_4pexels-anni-roenkae-2860807.jpg"
+        alt="Waiting for actual Art from Hazel"
+      />
+    </main>
     <footer>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
