--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -15,6 +15,32 @@
       <a href="./site-plan.html">Site Plan</a>
       <a href="https://wireframe.cc/kETTgA">FAQs page Wire frame</a>
     </nav>
+    <main>
+      <h3><b>What questions can be answered?</b></h3>
+      <p>
+        They can expect to know a ball park on price they will pay for the art.
+        Who Hazel_Arts is, what she does, and what her insperations for her
+        peices are. Ways to contact and request things to be created, and
+        estimated times for there compleation.
+      </p>
+      <h3><b>What info is required to compleate actions?</b></h3>
+      <p>
+        There will be an account system created. Most if not all orders will be
+        done through the UI on the requests page, where contact info and
+        description/concepts of the item to be made will need to be
+        supplied/refferenced. An understanding that this is a buisness and that
+        things will not be free.
+      </p>
+      <p>Images for the Page 3</p>
+      <img
+        src="./Img/rsz_pexels-dids-3737718.jpg"
+        alt="Waiting for actual Art from Hazel"
+      />
+      <img
+        src="./Img/rsz_pexels-ezequiel-da-silva-2902536.jpg"
+        alt="Waiting for actual Art from Hazel"
+      />
+    </main>
     <footer>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
