--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <img href="index.html" src="" alt="Hazel_Artz Logo" />
+      <a href="./index.html"><img src="" alt="Hazel_Artz Logo" /></a>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
