--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/stylesheet.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Hazel Artz | Home</title>
   </head>
   <body>
+    <a href="./index.html"
+      ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
+    /></a>
     <nav>
-      <a href="./index.html"><img src="" alt="Hazel_Artz Logo" /></a>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
@@ -58,6 +67,12 @@
     </main>
     <footer>
       Hazel_Artz&copy; Taden Marston &copy;
+      <p>Founded</p>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+
+      <a href="./index.html">Home</a>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
