--- a/Hazel_Arts/Drawings.html
+++ b/Hazel_Arts/Drawings.html
@@ -34,6 +34,7 @@
       />
     </main>
     <footer>
+      <a href="./index.html">Home</a>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
