--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -16,6 +16,21 @@
       <a href="https://wireframe.cc/kETTgA">FAQs page Wire frame</a>
     </nav>
     <main>
+      <h1>Your not the only one who's asked</h1>
+      <p>Q. Could i pay you in exposure</p>
+      <p>
+        A. No exposure does not pay the bills. You are paying for my skill and
+        knowledge on the product/ subject.
+      </p>
+      <p>Q. How Much is this going to cost?</p>
+      <p>A.</p>
+      <p>Q.</p>
+      <p>A.</p>
+      <p>Q.</p>
+      <p>A.</p>
+      <p>Q.</p>
+      <p>A.</p>
+
       <h3><b>What questions can be answered?</b></h3>
       <p>
         They can expect to know a ball park on price they will pay for the art.
@@ -42,6 +57,7 @@
       />
     </main>
     <footer>
+      <a href="./index.html">Home</a>
       <a href="./Drawings.html">Drawings</a>
       <a href="./FAQs.html">FAQ's</a>
       <a href="./site-plan.html">Site Plan</a>
