Update to Hazle Site

--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -22,14 +22,37 @@
         A. No exposure does not pay the bills. You are paying for my skill and
         knowledge on the product/ subject.
       </p>
-      <p>Q. How Much is this going to cost?</p>
-      <p>A.</p>
-      <p>Q.</p>
-      <p>A.</p>
-      <p>Q.</p>
-      <p>A.</p>
-      <p>Q.</p>
-      <p>A.</p>
+      <p>Q. What do you provide?</p>
+      <p>
+        A. As a growing artist, I provide concept art (such as references), YCH
+        art work, personal illustrations, Vtube model illustrations, as well as
+        rigging.
+      </p>
+      <p>Q. How do you price your commissions?</p>
+      <p>
+        A. Projects will be charged based on my knowledge on how to do it, my
+        experience, as well as time. Other factors include the complexity of
+        your model/ illustration.
+      </p>
+      <p>Q. What is your artstyle?</p>
+      <p>A. My art style is a manga/ anime style.</p>
+      <p>Q. What is the run time on my commission</p>
+      <p>
+        A. Depends on the project type, how detailed or complex you want your
+        commission to be.
+      </p>
+      <p>Q. Will you do NSFW?</p>
+      <p>
+        A. <b>I do not</b> and <b>WILL NOT do NSFW</b> illustrations or models.
+        I will redirect you to other artists for that request
+      </p>
+      <p>Q. How do I get in contact with you?</p>
+      <p>
+        A. You can <b>directly</b> contact me at hazelartzs@gmail.com as well as
+        find me at my various social media sites at the bottom of the page for
+        more examples of my work. I will not answer to DM’s on those various
+        platforms.
+      </p>
 
       <h3><b>What questions can be answered?</b></h3>
       <p>
