--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -19,54 +19,65 @@
       ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
     /></a>
     <nav>
+      <a href="./index.html">Home</a>
+      <a href="#">Portfolio</a>
       <a href="./Drawings.html">Drawings</a>
+      <a href="#">Costumes</a>
+      <a href="#">Dolls</a>
+      <a href="#">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a href="./site-plan.html">Site Plan</a>
-      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+      <a href="#">
+        <i class="fa-solid fa-circle-user"></i>
+        <p>Sign In</p></a
+      >
     </nav>
     <main>
       <article>
-        <h2><b>Why come to this site?</b></h2>
-        <p>
-          People will come to this site for a variaty of different reasons.
-          However the main ones will be for Commission based art requests. This
-          will be the place where a majority of the Buisness of Hazel_Arts will
-          be conducted. It will also serve as a portfolio/gallary of Her art to
-          display, and provide potential contracts and other buisness offers for
-          her tallents.
-        </p>
-        <h2><b>What questions can be answered?</b></h2>
-        <p>
-          They can expect to know a ball park on price they will pay for the
-          art. Who Hazel_Arts is, what she does, and what her insperations for
-          her peices are. Ways to contact and request things to be created, and
-          estimated times for there compleation.
-        </p>
-        <h2><b>What activities will be compleated?</b></h2>
-        <p>
-          Veiwing of Hazel's most recent work. requesting peices or things to be
-          created. Contacting Hazel for any specific questions or concerns.
-          Newsleters on deals and other promotions.
-        </p>
-        <h2><b>What info is required to compleate actions?</b></h2>
-        <p>
-          There will be an account system created. Most if not all orders will
-          be done through the UI on the requests page, where contact info and
-          description/concepts of the item to be made will need to be
-          supplied/refferenced. An understanding that this is a buisness and
-          that things will not be free.
-        </p>
-        <h2><b>Why come to this site?</b></h2>
-        <p>
-          The concept of this page may not be unique, but the content on it is.
-          The creations of Hazel_Arts will not be able to be aquired any where
-          else. So if you are a fan of what she does or want to aquire any of
-          her pieces this will be the only place you can get them.
-        </p>
+        <div class="bio">
+          <h1>Hello! I'm Hazel.</h1>
+          <img src="./Img/Small Chibi.png" alt="Chibi Hazel" />
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has survived not
+            only five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s
+            with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum. It is a long
+            established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout. The point of using
+            Lorem Ipsum is that it has a more-or-less normal distribution of
+            letters, as opposed to using 'Content here, content here', making it
+            look like readable English. Many desktop publishing packages and web
+            page editors now use Lorem Ipsum as their default model text, and a
+            search for 'lorem ipsum' will uncover many web sites still in their
+            infancy.
+          </p>
+        </div>
+        <img
+          class="peekaboo"
+          src="#"
+          alt="Hazel Chibi peeking over top of site."
+        />
+        <div class="gallary_box">
+          <h2>Here are some of my Recent works!</h2>
+          <div class="gallary">
+            <img src="./Img/Small Chair.png" alt="Gallary image 1" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 2" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 3" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 4" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 5" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 6" />
+            <img src="./Img/Small Chair.png" alt="Gallary image 7" />
+          </div>
+        </div>
       </article>
     </main>
     <footer>
-      Hazel_Artz&copy; Taden Marston &copy;
+      <p>Hazel_Artz&copy;</p>
+      <p>Taden Marston&copy;</p>
       <p>Founded</p>
       <i class="fa-brands fa-facebook"></i>
       <i class="fa-brands fa-instagram"></i>
