--- a/Hazel_Arts/Drawings.html
+++ b/Hazel_Arts/Drawings.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/stylesheet.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
     <title>Hazel Artz | Drawings</title>
   </head>
   <body>
+    <a href="./index.html"
+      ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
+    /></a>
     <nav>
-      <a href="./index.html"><img src="" alt="Hazel_Artz Logo" /></a>
+      <a href="./index.html">Home</a>
+      <a href="#">Portfolio</a>
       <a href="./Drawings.html">Drawings</a>
+      <a href="#">Costumes</a>
+      <a href="#">Dolls</a>
+      <a href="#">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a href="./site-plan.html">Site Plan</a>
-      <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
+      <a href="#">
+        <i class="fa-solid fa-circle-user"></i>
+        <p>Sign In</p></a
+      >
     </nav>
     <main>
       <h3><b>What activities will be compleated?</b></h3>
