--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/stylesheet.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -34,32 +35,21 @@
     <main>
       <article>
         <div class="bio">
-          <h1>Hello! I'm Hazel.</h1>
+          <h1>Hello! I'm Koyuki.</h1>
           <img src="./Img/Small Chibi.png" alt="Chibi Hazel" />
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum. It is a long
-            established fact that a reader will be distracted by the readable
-            content of a page when looking at its layout. The point of using
-            Lorem Ipsum is that it has a more-or-less normal distribution of
-            letters, as opposed to using 'Content here, content here', making it
-            look like readable English. Many desktop publishing packages and web
-            page editors now use Lorem Ipsum as their default model text, and a
-            search for 'lorem ipsum' will uncover many web sites still in their
-            infancy.
+            I am the owner of HazelArtzs. I am a growing artist who strives to
+            make quality and beautiful concepts/ illustrations along with art
+            dolls from time to time. I do work via commission, and currently
+            they are closed. I'm currently in my second year of college working
+            towards becoming a concept artist. Please feel free to check out my
+            recent works, TOS and my FAQs.
           </p>
         </div>
         <img
           class="peekaboo"
-          src="#"
-          alt="Hazel Chibi peeking over top of site."
+          src="./Img/peaking.png"
+          alt="Do not own, Primantis on DeviantArt is Owner! Using as place holder only."
         />
         <div class="gallary_box">
           <h2>Here are some of my Recent works!</h2>
@@ -70,24 +60,39 @@
             <img src="./Img/Small Chair.png" alt="Gallary image 4" />
             <img src="./Img/Small Chair.png" alt="Gallary image 5" />
             <img src="./Img/Small Chair.png" alt="Gallary image 6" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 7" />
           </div>
         </div>
       </article>
     </main>
     <footer>
-      <p>Hazel_Artz&copy;</p>
-      <p>Taden Marston&copy;</p>
-      <p>Founded</p>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
-
-      <a href="./index.html">Home</a>
-      <a href="./Drawings.html">Drawings</a>
-      <a href="./FAQs.html">FAQ's</a>
-      <a href="./site-plan.html">Site Plan</a>
-      <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+      <div class="tm">
+        <p>Hazel_Artz&copy;</p>
+        <p>Site Created by: Taden Marston</p>
+      </div>
+      <div class="footer_links">
+        <a href="./index.html">Home</a>
+        <a href="./Drawings.html">Drawings</a>
+        <a href="./FAQs.html">FAQ's</a>
+        <a href="./site-plan.html">Site Plan</a>
+        <a href="https://wireframe.cc/x6RNzK">Home page Wire frame</a>
+      </div>
+      <div class="social">
+        <div class="icon">
+          <a href="https://www.facebook.com">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.instagram.com">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.twitter.com">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
