--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -16,9 +16,9 @@
     <title>Hazel Artz | Home</title>
   </head>
   <body>
-    <a href="./index.html"
+    <!-- <a href="./index.html"
       ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
-    /></a>
+    /></a> -->
     <nav>
       <a href="./index.html">Home</a>
       <a href="#">Portfolio</a>
