--- a/Hazel_Arts/Drawings.html
+++ b/Hazel_Arts/Drawings.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./styles/base.css" />
     <title>Hazel Artz | Drawings</title>
   </head>
@@ -43,11 +50,34 @@
       />
     </main>
     <footer>
-      <a href="./index.html">Home</a>
-      <a href="./Drawings.html">Drawings</a>
-      <a href="./FAQs.html">FAQ's</a>
-      <a href="./site-plan.html">Site Plan</a>
-      <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
+      <div class="tm">
+        <p>Hazel_Artz&copy;</p>
+        <p>Site Created by: Taden Marston</p>
+      </div>
+      <div class="footer_links">
+        <a href="./index.html">Home</a>
+        <a href="./Drawings.html">Drawings</a>
+        <a href="./FAQs.html">FAQ's</a>
+        <a href="./site-plan.html">Site Plan</a>
+        <a href="https://wireframe.cc/BefQ7H">Drawings page Wire frame</a>
+      </div>
+      <div class="social">
+        <div class="icon">
+          <a href="https://www.facebook.com">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.instagram.com">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.twitter.com">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
