--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./styles/base.css" />
     <title>Hazel Artz | FAQs</title>
   </head>
@@ -52,8 +59,14 @@
       </p>
       <p>Q. Will you do NSFW?</p>
       <p>
-        A. <b>I do not</b> and <b>WILL NOT do NSFW</b> illustrations or models.
-        I will redirect you to other artists for that request
+        A.
+        <span style="color: rgb(217, 1, 1); font-weight: bolder">I do not</span>
+        and
+        <span style="color: rgb(217, 1, 1); font-weight: bolder"
+          >WILL NOT do NSFW</span
+        >
+        illustrations or models. I will redirect you to other artists for that
+        request
       </p>
       <p>Q. How do I get in contact with you?</p>
       <p>
@@ -63,21 +76,6 @@
         platforms.
       </p>
 
-      <h3><b>What questions can be answered?</b></h3>
-      <p>
-        They can expect to know a ball park on price they will pay for the art.
-        Who Hazel_Arts is, what she does, and what her insperations for her
-        peices are. Ways to contact and request things to be created, and
-        estimated times for there compleation.
-      </p>
-      <h3><b>What info is required to compleate actions?</b></h3>
-      <p>
-        There will be an account system created. Most if not all orders will be
-        done through the UI on the requests page, where contact info and
-        description/concepts of the item to be made will need to be
-        supplied/refferenced. An understanding that this is a buisness and that
-        things will not be free.
-      </p>
       <p>Images for the Page 3</p>
       <img
         src="./Img/rsz_pexels-dids-3737718.jpg"
@@ -89,11 +87,34 @@
       />
     </main>
     <footer>
-      <a href="./index.html">Home</a>
-      <a href="./Drawings.html">Drawings</a>
-      <a href="./FAQs.html">FAQ's</a>
-      <a href="./site-plan.html">Site Plan</a>
-      <a href="https://wireframe.cc/kETTgA">FAQs page Wire frame</a>
+      <div class="tm">
+        <p>Hazel_Artz&copy;</p>
+        <p>Site Created by: Taden Marston</p>
+      </div>
+      <div class="footer_links">
+        <a href="./index.html">Home</a>
+        <a href="./Drawings.html">Drawings</a>
+        <a href="./FAQs.html">FAQ's</a>
+        <a href="./site-plan.html">Site Plan</a>
+        <a href="https://wireframe.cc/kETTgA">FAQs page Wire frame</a>
+      </div>
+      <div class="social">
+        <div class="icon">
+          <a href="https://www.facebook.com">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.instagram.com">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.twitter.com">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
