Css Updates to Header and footer

--- a/Hazel_Arts/index.html
+++ b/Hazel_Arts/index.html
@@ -25,9 +25,9 @@
       <a href="./Drawings.html">Drawings</a>
       <a href="#">Costumes</a>
       <a href="#">Dolls</a>
-      <a href="#">Terms of Service</a>
+      <a class="tos" href="#">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a href="#">
+      <a class="sign_in" href="#">
         <i class="fa-solid fa-circle-user"></i>
         <p>Sign In</p></a
       >
