--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -15,18 +15,18 @@
     <title>Hazel Artz | FAQs</title>
   </head>
   <body>
-    <a href="./index.html"
+    <!-- <a href="./index.html"
       ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
-    /></a>
+    /></a> -->
     <nav>
       <a href="./index.html">Home</a>
       <a href="#">Portfolio</a>
       <a href="./Drawings.html">Drawings</a>
       <a href="#">Costumes</a>
       <a href="#">Dolls</a>
-      <a href="#">Terms of Service</a>
+      <a class="tos" href="#">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a href="#">
+      <a class="sign_in" href="#">
         <i class="fa-solid fa-circle-user"></i>
         <p>Sign In</p></a
       >
